--- a/Notebooks/FitBias.ipynb
+++ b/Notebooks/FitBias.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,9 @@
     "from csky import cext\n",
     "import time\n",
     "from csky import hyp\n",
-    "import copy\n"
+    "import copy\n",
+    "\n",
+    "trialfile_dir = '/data/user/wluszczak/KDE_csky/reproducibility/ntv5/'"
    ]
   },
   {
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +292,7 @@
        "Text(0.5,1,'dT=20 days, $\\\\gamma=2.0$')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -315,7 +317,7 @@
     "ns_err = []\n",
     "for ns in np.arange(2.0, 20.0, 2.0):\n",
     "    try:\n",
-    "        f = glob.glob('/data/user/wluszczak/KDE_csky/reproducibility/ntv5/ntv5_sigtrials_%s_ns.npy'%(ns))\n",
+    "        f = glob.glob(trialfile_dir+'ntv5_sigtrials_%s_ns.npy'%(ns))\n",
     "        data = np.load(f[0], allow_pickle=True)\n",
     "        all_ns = []\n",
     "        for d in data:\n",
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +365,7 @@
        "Text(0.5,1,'dT=20 days, $\\\\gamma=2.0$')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -388,7 +390,7 @@
     "ns_err = []\n",
     "for ns in np.arange(2.0, 30.0, 2.0):\n",
     "    try:\n",
-    "        f = glob.glob('/data/user/wluszczak/KDE_csky/reproducibility/ntv5/ntv5_sigtrials_%s_ns.npy'%(ns))\n",
+    "        f = glob.glob(trialfile_dir+'ntv5_sigtrials_%s_ns.npy'%(ns))\n",
     "        data = np.load(f[0], allow_pickle=True)\n",
     "        all_ns = []\n",
     "        for d in data:\n",
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +439,7 @@
        "Text(0.5,1,'dT=10 days, $\\\\gamma=2.0$')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -462,7 +464,7 @@
     "ns_err = []\n",
     "for ns in np.arange(2.0, 30.0, 2.0):\n",
     "    try:\n",
-    "        f = glob.glob('/data/user/wluszczak/KDE_csky/reproducibility/ntv5/ntv5_sigtrials_%s_ns.npy'%(ns))\n",
+    "        f = glob.glob(trialfile_dir+'ntv5_sigtrials_%s_ns.npy'%(ns))\n",
     "        data = np.load(f[0], allow_pickle=True)\n",
     "        all_ns = []\n",
     "        for d in data:\n",
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +517,7 @@
        "Text(0.5,1,'$T_0$ = 57017.01, dT=10 days, $\\\\gamma=2.0$')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -540,7 +542,7 @@
     "ns_err = []\n",
     "for ns in np.arange(2.0, 30.0, 2.0):\n",
     "    try:\n",
-    "        f = glob.glob('/data/user/wluszczak/KDE_csky/reproducibility/ntv5/ntv5_sigtrials_%s_ns.npy'%(ns))\n",
+    "        f = glob.glob(trialfile_dir+'ntv5_sigtrials_%s_ns.npy'%(ns))\n",
     "        data = np.load(f[0], allow_pickle=True)\n",
     "        all_ns = []\n",
     "        for d in data:\n",
